--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,32 @@
-body {
-    height: 100%;
-    background-image: linear-gradient(gray,black);    
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    /*
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
+.nav-button {
+    padding: 15px;
+}
+.nav-item {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.navbar-toggler-icon{
+    padding: 10px;
+}
+.logo_header {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
-.fondow2a {
-    /*background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background: url("./img/Portada\ Index.png");
-    min-width: 100%;*/
-    background-image: url('img/PortadaIndex.png');
+.background {
+    background-image: url('../img/PortadaIndex.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+}
+@media (max-width: 767.98px) {
+    .navbar-nav.social-icons {
+        flex-wrap: wrap;
+      }
+    .navbar-nav.social-icons .nav-item {
+      flex-basis: 50%;
+      max-width: 50%;
+    }
     
-}
-
-.barramenu {
-    /*background: url('./img/MenuCabecera.png');
-    background-position: bo center;
-    min-height: 100%;
-    padding-bottom: 50px;*/
-    background-image: url('img/MenuCabecera.png'); 
-    height: 11vh;
-    background-size: cover;
-    padding-top: 5vh;
-}
-
- 
-.iconow2a {
-background: url('./img/Icono\ Menú\ inicio.png');
-background-position: center center;
-background-repeat: no-repeat;
-}
-
-.footer {
-padding: 30px 20px;
-background-color: #2e3550;
-color: white;
-text-align: center;
-}
+  }
